; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_cropscale.c_color_format_range.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_cropscale.c_color_format_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"full\00", align 1
@AVCOL_RANGE_JPEG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"limited\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32)* @color_format_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @color_format_range(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %8 [
    i32 131, label %7
    i32 130, label %7
    i32 128, label %7
    i32 129, label %7
  ]

7:                                                ; preds = %2, %2, %2, %2
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %14

8:                                                ; preds = %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @AVCOL_RANGE_JPEG, align 4
  %11 = icmp eq i32 %9, %10
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0)
  store i8* %13, i8** %3, align 8
  br label %14

14:                                               ; preds = %8, %7
  %15 = load i8*, i8** %3, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
